feat: added tiles api for tiles count spec
